[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainMenuUI.gd" type="Script" id=1]

[node name="MainMenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )

[node name="BackgroundPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.537109
anchor_top = 0.0833333
anchor_right = 0.927734
anchor_bottom = 0.416667
text = "Play"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.732422
anchor_top = 0.75
anchor_right = 0.927734
anchor_bottom = 0.916667
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameOptionButton" type="OptionButton" parent="."]
anchor_left = 0.540039
anchor_top = 0.451667
anchor_right = 0.647461
anchor_bottom = 0.485
text = "Single Player"
items = [ "Single Player", null, false, 0, null, "Single System Multiplayer", null, false, 1, null, "Wireless Multiplayer", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="button_down" from="PlayButton" to="." method="PlayButton_down"]
[connection signal="button_down" from="QuitButton" to="." method="QuitButton_down"]
[connection signal="item_selected" from="GameOptionButton" to="." method="GameOptionButton_selected"]
